# agentic-technical-watch

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  A2A_COMMUNICATION_PROTOCOL_VALIDATION_REPORT.md  A2A_ENDPOINT_FIXES.md  CIRCUIT_BREAKER_VALIDATION_REPORT.md  CLAUDE.md  COMPLETE_WORKFLOW_INTEGRATION_REPORT.md  COMPREHENSIVE_STRESS_TESTING_REPORT.md  DATA_FLOW_ANALYSIS_SUMMARY.md  DEPLOYMENT_AUTOMATION_SUMMARY.md  DOCKER_SECURITY_IMPLEMENTATION.md  Dockerfile  ERROR_RECOVERY_VALIDATION_SUMMARY.md  MIGRATION_SUMMARY.md  Makefile  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  SECURITY_AUDIT_REPORT.md  a2a_state_management_validation_report_20250622_162959.json  alembic.ini  alert_standalone_test.py  comprehensive_demo.py  create_coordinator_tables.py  debug_auth.py  deploy_production.sh  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  error_recovery_validation.py  error_recovery_validation_report.json  main.py  minimal_alert_test.py  performance_benchmark_results_1750603914.json  performance_benchmark_results_1750603999.json  production_stress_test_report_1750604956.json  production_stress_test_summary_1750604956.txt  (+38 more)
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2025_06_20_2148-8b74b7f8cc78_initial_database_schema.py  2025_06_21_0017-ca668e63d7bf_add_coordinator_agent_tables.py  2025_06_21_1933-d4e5f6a7b8c9_add_idempotency_and_state_management.py  2025_06_22_1426-6d29cd557f0f_add_missing_database_indexes_for_.py  2025_06_22_1622-3d954718e643_add_missing_tables_with_correct_schema.py  2025_06_22_1730-e8a9c7d4b5f6_add_cascade_options_to_foreign_key_constraints.py
docker/alertmanager/: alertmanager.yml
docker/blackbox-exporter/: blackbox.yml
docker/loki/: loki-config.yml
docker/postgres-exporter/: queries.yaml
docker/prometheus/: prometheus.yml
docker/promtail/: promtail-config.yml
docs/: DATABASE_INDEXES.md  DOCKER_SECURITY.md
docs/api/: README.md  agent-cards.md  authentication.md  error-codes.md
docs/architecture/: README.md  architectural-decisions.md  system-architecture.md
docs/operations/: PRODUCTION_DEPLOYMENT_GUIDE.md  TROUBLESHOOTING_GUIDE.md
docs/runbooks/: DISASTER_RECOVERY.md  README.md  SYSTEM_HEALTH_MONITORING.md  daily-operations.md  incident-response.md
docs/specs/: plan.md  promp-plan.md  prompt_plan.md  spec.md  todo.md
docs/troubleshooting/: README.md  system-failure.md
docs/user-guide/: README.md  quick-start.md
reddit_watcher/: __init__.py  __main__.py  a2a_protocol.py  agent_coordination.py  auth_middleware.py  circuit_breaker.py  config.py  idempotency.py  models.py  security_middleware.py  shutdown.py  task_recovery.py
reddit_watcher/agents/: __init__.py  alert_agent.py  base.py  coordinator_agent.py  filter_agent.py  retrieval_agent.py  server.py  summarise_agent.py  test_agent.py
reddit_watcher/database/: __init__.py  migrations.py  utils.py
reddit_watcher/observability/: __init__.py  alerting.py  health.py  integration.py  logging.py  metrics.py  tracing.py
reddit_watcher/performance/: __init__.py  dashboard.py  decorators.py  ml_model_cache.py  resource_monitor.py
reports/analysis/: CODE_REVIEW_FIXES.md  CODE_REVIEW_REPORT.md  CRITICAL_MIGRATION_FIX.md  IMPLEMENTATION_PLAN.md  MIGRATION_SAFETY_ANALYSIS.md  MIGRATION_SAFETY_REPORT_FINAL.md  OBSERVABILITY_IMPLEMENTATION_REPORT.md  STATE_MANAGEMENT_EXECUTIVE_SUMMARY.md  STRESS_TESTING_EXECUTIVE_SUMMARY.md  STRESS_TEST_EXECUTIVE_SUMMARY.md  SYSTEM_STATUS_REPORT.md  reddit_data_flow_analysis_report.md
reports/integration/: TEST_EXECUTION_RESULTS.md  (+1 more)
scripts/: generate-secure-env.py
tests/: test_a2a_base.py  test_alert_agent.py  test_cascade_relationships.py  test_circuit_breaker.py  test_config.py  test_coordinator_agent.py  test_coordinator_circuit_breaker.py  test_filter_agent.py  test_idempotency.py  test_integration_workflow.py  test_integration_workflow_simple.py  test_migrations.py  test_models.py  test_observability_integration.py  test_resource_management.py  test_retrieval_agent.py  test_smoke.py  test_summarise_agent.py  test_utils.py
(+58 files in other folders)
